Added null model code

--- a/settings.ini
+++ b/settings.ini
@@ -19,7 +19,10 @@ level =
 comm = 
 ;Use this as target file, leave blank to default to level and comm
 map_filename = 
-
+;stats file. This gets overwritten! Leave blank to default to stats.out
+stats_filename = 
+;image output type; 
+img_type = png
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;In the following the default filename has a base name e.g. "boxes"
@@ -60,6 +63,9 @@ input_file =
 output_file = 
 index_file = 
 
+
+
+
 ;parameters of the network building
 [network]
 ;If output file exists, don't regenerate
@@ -68,7 +74,25 @@ regen = False
 default_filenames = True
 ;specify input and output file names
 input_file = 
-output_file = 
+box_file = 
+con_file = 
+sen_file = 
+graph_file = 
+
+;parameters for special distance null model community finding
+[null]
+;should I make a node properties file?
+runprop = True
+;If output file exists, don't regenerate
+regen = False
+;use default input and output file names
+default_filenames = True
+;bin distances to 5km
+base = 5
+;specify input and output file names
+csv_file = 
+null_file = 
+
 
 ;parameters of the community finding
 [findcom]
