Added null model code

--- a/settings.ini
+++ b/settings.ini
@@ -81,7 +81,7 @@ graph_file =
 
 ;parameters for special distance null model community finding
 [null]
-;should I make a node properties file?
+;should I do the null model stuff
 runprop = True
 ;If output file exists, don't regenerate
 regen = False
@@ -92,7 +92,10 @@ base = 5
 ;specify input and output file names
 csv_file = 
 null_file = 
-
+label_file = 
+graph_file = 
+communities_file = 
+communities_plot_file = 
 
 ;parameters of the community finding
 [findcom]
