added devon for test

--- a/settings_uk.ini
+++ b/settings_uk.ini
@@ -6,7 +6,7 @@ gadm_location = /home/rudy/social_sensing_dbs/gadm.db
 country_location = country.db
 ;The area to look in (assumes its in GADM).
 ;Special cases England and Wales, United States, United States+ (draws state boundaries), London+ (draws boroughs)
-meta_location = England and Wales
+meta_location = Devon
 ;accuracy of polygon, set negative to use full polygon (higher tolerance can speed things up quite a bit...)
 tolerance = 0.01
 ;Grid or poly database. Will return error if both true or both false.
