changed location of gadm.db and inputfile

--- a/settings_uk.ini
+++ b/settings_uk.ini
@@ -1,7 +1,7 @@
 ;Parameters fed to multiple subroutines
 [global]
 ;location of gadm database
-gadm_location = /home/rudy/social_sensing_dbs/gadm.db
+gadm_location = gadm.db
 ;location of country database
 country_location = country.db
 ;The area to look in (assumes its in GADM).
@@ -35,7 +35,7 @@ iodir =
 ;parameters of the tweet extraction
 [extract]
 ;specify the full path!
-input_file = /data/Tweets/southwest_batch3_json/all_uk_raw.json
+input_file = ../outputfile.json
 ;If output file exists, don't regenerate
 regen = False
 ;use default output file name
