network plot added to main code

--- a/settings_uk.ini
+++ b/settings_uk.ini
@@ -1,7 +1,7 @@
 ;Parameters fed to multiple subroutines
 [global]
 ;location of gadm database
-gadm_location = /home/rudy/social_sensing_dbs/gadm.db
+gadm_location = /data/Tweets/cleanup_db/gadm.db
 ;location of country database
 country_location = country.db
 ;The area to look in (assumes its in GADM).
@@ -24,7 +24,7 @@ stats_filename =
 ;image output type; 
 img_type = png
 ;;input/output file directory. All results are written here and expected to be in here! Default is execution directory
-iodir = 
+iodir = /data/Tweets/UK/
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;In the following the default filename has a base name e.g. "boxes"
@@ -144,3 +144,22 @@ default_filenames = True
 input_file = 
 output_base = 
 
+;parameters of the community mapping
+[networkplot]
+;If output file exists, don't regenerate
+regen = False
+;use default input and output file names
+default_filenames = True
+;specify input and output file names
+input_file = 
+output_file = 
+;max_node: max size of node in fig
+;node_factor: scale self connections
+;min_self: include nodes with this many self connections; 
+;min_connections: show edges with this many connections
+;edge_w: plot edge width
+max_node = 400 
+node_factor = 0.01
+min_self = 0
+min_connection = 100
+edge_w = 0.01
