--- a/settings_uk.ini
+++ b/settings_uk.ini
@@ -122,6 +122,8 @@ edited_file =
 regen = False
 ;use default input and output file names
 default_filenames = True
+;alphas
+node_alphas = /data/Tweets/UK/node_degreecentrality.txt
 ;specify input and output file names
 find_file = 
 refine_file = 
