--- a/settings_uk.ini
+++ b/settings_uk.ini
@@ -123,7 +123,7 @@ regen = False
 ;use default input and output file names
 default_filenames = True
 ;alphas
-node_alphas = /data/Tweets/UK/node_degreecentrality.txt
+node_alphas = node_properties.txt
 ;specify input and output file names
 find_file = 
 refine_file = 
